Fixed warnings related to missing TypeCharm data and improved type charm multiplier calculation.